k8s/overlays/azure-dev/filebrowser-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filebrowser
  labels:
    app: gridcapa
    component: filebrowser

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: filebrowser
  template:
    metadata:
      labels:
        app: gridcapa
        component: filebrowser
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: docker.io/filebrowser/filebrowser:latest
          imagePullPolicy: Always
          args: ["-p=8080"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /.filebrowser.json
              subPath: .filebrowser.json
              name: filebrowser-configmap-volume
            - mountPath: "/data"
              name: filebrowser-storage
            - mountPath: "/srv/sftp"
              name: sftp-server-storage
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      volumes:
        - name: sftp-server-storage
          persistentVolumeClaim:
            claimName: sftp-storage
        - name: filebrowser-storage
          persistentVolumeClaim:
            claimName: filebrowser-storage
        - name: filebrowser-configmap-volume
          configMap:
            name: filebrowser-configmap
      restartPolicy: Always
