k8s/overlays/azure-dev/ftp-filebrowser-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ftp-filebrowser
  labels:
    app: gridcapa
    component: ftp-filebrowser

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: ftp-filebrowser
  template:
    metadata:
      labels:
        app: gridcapa
        component: ftp-filebrowser
    spec:
      containers:
        - name: ftp-filebrowser
          image: docker.io/filebrowser/filebrowser:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/srv"
              name: ftp-server-storage
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      volumes:
        - name: ftp-server-storage
          persistentVolumeClaim:
            claimName: ftp-storage
      restartPolicy: Always
