k8s/overlays/azure-dev/ftp-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ftp-server
  labels:
    app: gridcapa
    component: ftp-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: ftp-server
  template:
    metadata:
      labels:
        app: gridcapa
        component: ftp-server
    spec:
      containers:
        - name: ftp-server
          image: docker.io/delfer/alpine-ftp-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 21
            - containerPort: 21000
            - containerPort: 21001
            - containerPort: 21002
            - containerPort: 21003
            - containerPort: 21004
            - containerPort: 21005
            - containerPort: 21006
            - containerPort: 21007
            - containerPort: 21008
            - containerPort: 21009
            - containerPort: 21010
          volumeMounts:
            - mountPath: "/data/gridcapa"
              name: ftp-server-storage
          livenessProbe:
            tcpSocket:
              port: 21
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 21
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      volumes:
        - name: ftp-server-storage
          persistentVolumeClaim:
            claimName: ftp-storage
      restartPolicy: Always
