k8s/overlays/azure-dev/sftp-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sftp-server
  labels:
    app: gridcapa
    component: sftp-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: sftp-server
  template:
    metadata:
      labels:
        app: gridcapa
        component: sftp-server
    spec:
      containers:
        - name: sftp-server
          image: docker.io/atmoz/sftp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: /home/gridcapa/data
              name: sftp-server-storage
          livenessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      volumes:
        - name: sftp-server-storage
          persistentVolumeClaim:
            claimName: sftp-storage
      restartPolicy: Always
