k8s/overlays/azure-dev/filebrowser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app: gridcapa
    component: filebrowser
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: filebrowser
  ports:
    - port: 80
      targetPort: 80
      name: http
