k8s/overlays/azure-dev/ftp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp-server
  labels:
    app: gridcapa
    component: ftp-server
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: ftp-server
  ports:
    - name: port-21
      port: 21
      targetPort: 21
      protocol: TCP
    - name: port-21000
      port: 21000
      targetPort: 21000
      protocol: TCP
    - name: port-21001
      port: 21001
      targetPort: 21001
      protocol: TCP
    - name: port-21002
      port: 21002
      targetPort: 21002
      protocol: TCP
    - name: port-21003
      port: 21003
      targetPort: 21003
      protocol: TCP
    - name: port-21004
      port: 21004
      targetPort: 21004
      protocol: TCP
    - name: port-21005
      port: 21005
      targetPort: 21005
      protocol: TCP
    - name: port-21006
      port: 21006
      targetPort: 21006
      protocol: TCP
    - name: port-21007
      port: 21007
      targetPort: 21007
      protocol: TCP
    - name: port-21008
      port: 21008
      targetPort: 21008
      protocol: TCP
    - name: port-21009
      port: 21009
      targetPort: 21009
      protocol: TCP
    - name: port-21010
      port: 21010
      targetPort: 21010
      protocol: TCP
