k8s/overlays/azure-dev/sftp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp-server
  labels:
    app: gridcapa
    component: sftp-server
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: sftp-server
  ports:
    - name: port-22
      port: 22
      targetPort: 22
      protocol: TCP
